--- a/wohao-vue/index.html
+++ b/wohao-vue/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link href="https://cdn.bootcss.com/animate.css/3.5.2/animate.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/static/font-awesome/css/font-awesome.min.css">
     <title>wohao-vue</title>
+    <script>
+      document.documentElement.style.fontSize = document.documentElement.clientWidth/3.75+'px'
+    </script>
   </head>
   <body>
     <div id="app"></div>
